Run npx express-generator

--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "hockeyrats",
-  "version": "1.0.0",
-  "description": "Content for hockeyrats.com",
-  "main": "app.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jeffrylew/hockeyrats.git"
-  },
-  "keywords": [
-    "hockey"
-  ],
-  "author": "Jeffry Lew",
-  "license": "SEE LICENSE IN LICENSE",
-  "bugs": {
-    "url": "https://github.com/jeffrylew/hockeyrats/issues"
-  },
-  "homepage": "https://github.com/jeffrylew/hockeyrats#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
+  }
 }
