--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "git+https://github.com/jeffrylew/hockeyrats.git"
   },
   "keywords": [
-    "hockey"
+    "hockey",
+    "rats"
   ],
   "author": "Jeffry Lew",
   "license": "SEE LICENSE IN LICENSE",
@@ -25,5 +26,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
+  },
+  "engines": {
+    "node": "12.16.0"
   }
 }
