--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hockeyrats",
+  "name": "woohan-hockey",
   "version": "0.0.0",
-  "description": "Content for hockeyrats.com",
+  "description": "Content for woohanhockey.com",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
