--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "date-fns": "^2.12.0",
+    "date-fns-tz": "^1.0.10",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
