--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "url": "https://github.com/jeffrylew/hockeyrats/issues"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "date-fns": "^2.12.0",
+    "cookie-parser": "~1.4.5",
+    "date-fns": "^2.14.0",
     "date-fns-tz": "^1.0.10",
-    "debug": "~2.6.9",
+    "debug": "~4.1.1",
     "dotenv": "^8.2.0",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "ejs": "~3.1.3",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.0",
+    "morgan": "~1.10.0",
+    "stripe": "^8.69.0"
   },
   "engines": {
     "node": "12.16.0"
