--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "~3.1.3",
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
+    "mailgun.js": "^3.5.0",
     "morgan": "~1.10.0",
     "stripe": "^8.69.0"
   },
